added zipcode task

--- a/ansible_data/runall-roles.yml
+++ b/ansible_data/runall-roles.yml
@@ -4,3 +4,4 @@
     become: true
     roles:
       - { role: error-debugging, vars: [ { error_dir: "/home/vagrant/ansible/"} , {error_filename: "error-debugging.txt"} ] }
+      - { role: postleitzahl-aufloeser, vars: { zipcode: "10115"} }
