- added nginx static server role  - modified readme files

--- a/ansible_data/runall-roles.yml
+++ b/ansible_data/runall-roles.yml
@@ -4,5 +4,6 @@
     become: true
     roles:
       - { role: install-packages }
-      - { role: error-debugging, vars: [ { error_dir: "/home/vagrant/ansible/"} , {error_filename: "error-debugging.txt"} ] }
-      - { role: postleitzahl-aufloeser, vars: { zipcode: "10115"} }
+      - { role: error-debugging, vars: [ { error_dir: "/home/vagrant/ansible/" } , {error_filename: "error-debugging.txt" } ] }
+      - { role: postleitzahl-aufloeser, vars: { zipcode: "10115" } }
+      - { role: nginx-konfigurierende, vars: { locations: ["red" , "green", "blue", "yellow"] } }
