--- a/ansible_data/roles/nginx-konfigurierende/tasks/main.yml
+++ b/ansible_data/roles/nginx-konfigurierende/tasks/main.yml
@@ -5,7 +5,7 @@
   become: true
   template:
     src: ../templates/nginx.conf.j2
-    dest: /etc/nginx/nginx.conf
+    dest: /etc/nginx/sites-enabled/default
     mode: '0755'
     group: "root"
     owner: "root"
