--- a/ansible_data/runall-roles.yml
+++ b/ansible_data/runall-roles.yml
@@ -6,4 +6,4 @@
       - { role: install-packages }
       - { role: error-debugging, vars: [ { error_dir: "/home/vagrant/ansible/" } , {error_filename: "error-debugging.txt" } ] }
       - { role: postleitzahl-aufloeser, vars: { zipcode: "10115" } }
-      - { role: nginx-konfigurierende, vars: { locations: ["red" , "green", "blue", "yellow"] } }
+      - { role: nginx-konfigurierende, vars: { locations: ["red" , "green", "blue", "yellow","white"] } }
